--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,10 +56,10 @@ h3{
 }
 
 .nav ul li{
-  /* box-shadow: inset 3px 3px black; */
   padding: 1.5vh;
   transition: 0.5s;
 }
+
 
 .nav ul :hover{
 background-color: rgb(241, 239, 243);
@@ -72,13 +72,14 @@ color: rgb(36, 35, 37);
 
 .section{
   width: 65%;
-  margin: auto;
+  margin: 3rem auto;
   border-radius: 5px;
   text-align: center;
   padding: 2rem;
   min-height: 70vh; 
   box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
   background: #fff;
+  background: beige;
 }
 
 .form{
