--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,7 +111,7 @@ color: rgb(36, 35, 37);
 
 .form{
   border: dotted;
-  margin: 2rem auto;
+  margin: 4rem auto;
   width: 70%;
   padding: 10px;
 }
@@ -220,10 +220,12 @@ button:hover{
 .unselectedChannel:active{
   border-color: #2a6fbe;
   background:#b5d4f8;
+  border-width: 1.5px;
 }
 
 
 .selectedChannel{
+  border-color: #2a6fbe;
   background: #dbe6f0;
   transition: background 50ms;
 }
@@ -231,9 +233,11 @@ button:hover{
 .selectedChannel:hover{
   border-color: #2a6fbe;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+  background:#b5d4f8
 }
 
 .selectedChannel:active{
   border-color: #2a6fbe;
-  background:#b5d4f8
+  border-width: 1.5px;
+  background:#b5d4f8  
 }
